--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>/title>
 </head>
 <body>
   <h1>This is my Github Page</h1>
+  <a href="./tribute-page/index.html">Tribute Page</a>
 </body>
 </html>
