--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -9,11 +9,41 @@
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
-  <title>Tribute Page</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Teko&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="main">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="#bio">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1 id="title">Steve Jobs</h1>
+      <h3>1955-2011</h3>
+    </main>
+    <section id="bio" class="bio">
+      <div id="img-div">
+        <img id="image" src="images/img.jfif" alt="steve jobs">
+        <div id="img-caption">
+          <h3>Steven Paul “Steve” Jobs</h3>
+          <p id="tribute-info">
+            was an Americal information technology entrepreneur and invetor. He was the cofounder, chairman, and CEO of Apple Inc, CEO and largest shareholder of Pixar Animation Studios; and founder, chairman, and CEO of NeXT Inc. Jobs is widely recognized as a pioneer of the microcomputer revolution of the 1970s, along with Apple co-founder Streve Wozniak. Creative entrepreneur whose passion for perfection and ferocious drive revolutionized six industries: personal computers, animated movies, music, phones, tablet computing, and digital publishing.
+          </p>
+          <button>
+            <a href="https://www.biography.com/business-figure/steve-jobs" id="tribute-link" target="_blank">More info...</a>
+          </button>
+        </div>
+      </div>
+    </section>
+    <footer id="footer">
+      Ralph Sulit &copy 2021
+    </footer>
+  </div>
+  <!-- <div id="main">
     <h1 id="title">Steve Jobs</h1>
     <div class="wrapper">
       <div id="img-div">
@@ -24,9 +54,9 @@
         <p id="tribute-info">
           was an Americal information technology entrepreneur and invetor. He was the cofounder, chairman, and CEO of Apple Inc, CEO and largest shareholder of Pixar Animation Studios; and founder, chairman, and CEO of NeXT Inc. Jobs is widely recognized as a pioneer of the microcomputer revolution of the 1970s, along with Apple co-founder Streve Wozniak. Creative entrepreneur whose passion for perfection and ferocious drive revolutionized six industries: personal computers, animated movies, music, phones, tablet computing, and digital publishing.
         </p>
-        <a href="https://www.biography.com/business-figure/steve-jobs" id="tribute-link" target="_blank">more info...</a>
+        
       </div>
     </div>
-  </div>
+  </div> -->
 </body>
 </html>
