added form project and modified main index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>This is my Github Page</h1>
-  <a href="./tribute-page/index.html">Tribute Page</a>
+  <a href="./tribute-page/index.html">Tribute Page</a><br>
+  <a href="./form/index.html">Form</a>
 </body>
 </html>
