--- a/form/index.html
+++ b/form/index.html
@@ -16,7 +16,7 @@
   <main>
     <!-- Left Side -->
     <div class="left">
-      <h1 id="title" class="title">Learn to code by watching other</h1>
+      <h1 id="title" class="title">Learn to code by watching others</h1>
       <p id="description" class="description">
         See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
         but understanding how developers think is invaluable. 
