--- a/form/index.html
+++ b/form/index.html
@@ -38,7 +38,7 @@
           <input type="email" id="email" placeholder="Email" required><br>
           <!-- Number -->
           <label for="number" id="number-label">Number:</label><br>
-          <input type="number" id="number" placeholder="Contact" min="1" max="12"  required><br>
+          <input type="number" id="number" placeholder="Contact" min="1" maxlength="12"  required><br>
           <!-- Gender -->
           <label for="">Gender:</label><br>
           <input type="radio" id="male" name="gender" value="male">
