--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>This is my Github Page</h1>
   <a href="./tribute-page/index.html">Tribute Page</a><br>
-  <a href="./form/index.html">Form</a>
+  <a href="./form/index.html">Form</a><br>
+  <a href="./chess/index.html">Chessboard</a><br>
 </body>
 </html>
