--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <a href="./tribute-page/index.html">Tribute Page</a><br>
   <a href="./form/index.html">Form</a><br>
   <a href="./chess/index.html">Chessboard</a><br>
+  <a href="./chess/grid.html">Chessboard Grid</a><br>
 </body>
 </html>
