adding starter files (finished with mobile view)

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
   <a href="./form/index.html">Form</a><br>
   <a href="./chess/index.html">Chessboard</a><br>
   <a href="./chess/grid.html">Chessboard Grid</a><br>
+  <a href="./landing-page/index.html">Landing Page</a><br>
 </body>
 </html>
