change the header in tablet view

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -39,7 +39,7 @@
       <!-- Header Banner -->
       <div class="header-banner white">
         <h1>we are creatives</h1>
-        <a href="#"><img src="images/icon-arrow-down.svg" alt="down arrow"></a>
+        <a href="#about"><img src="images/icon-arrow-down.svg" alt="down arrow"></a>
       </div>
     </div>
   </header>
