tablet view done

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -81,28 +81,30 @@
     <section>
       <div id="testi" class="testi">
         <h5>client testimonials</h5>
-        <div class="testi-box">
-          <img src="images/image-emily.jpg" alt="emily">
-          <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-          <div class="testi-name">
-            Emily R.
-            <span class="position">Marketing Director</span>
+        <div class="testi-wrapper">
+          <div class="testi-box">
+            <img src="images/image-emily.jpg" alt="emily">
+            <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+            <div class="testi-name">
+              Emily R.
+              <span class="position">Marketing Director</span>
+            </div>
           </div>
-        </div>
-        <div class="testi-box">
-          <img src="images/image-thomas.jpg" alt="thomas">
-          <p>Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience.</p>
-          <div class="testi-name">
-            Thomas S.
-            <span class="position">Chief Operating Officer</span>
+          <div class="testi-box">
+            <img src="images/image-thomas.jpg" alt="thomas">
+            <p>Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience.</p>
+            <div class="testi-name">
+              Thomas S.
+              <span class="position">Chief Operating Officer</span>
+            </div>
           </div>
-        </div>
-        <div class="testi-box">
-          <img src="images/image-jennie.jpg" alt="jennie">
-          <p>Incredible end result! Our sales increased over  400% when we worked with Sunnyuside. Highly recommended</p>
-          <div class="testi-name">
-            Jennie F.
-            <span class="position">Business Owner</span>
+          <div class="testi-box">
+            <img src="images/image-jennie.jpg" alt="jennie">
+            <p>Incredible end result! Our sales increased over  400% when we worked with Sunnyuside. Highly recommended</p>
+            <div class="testi-name">
+              Jennie F.
+              <span class="position">Business Owner</span>
+            </div>
           </div>
         </div>
       </div>
