--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -9,133 +9,92 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
-  <title>Sunnyside</title>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Exo:wght@600&family=Open+Sans&family=Playfair+Display:wght@400;500&family=Roboto&display=swap" rel="stylesheet">
+  <title>Landing Page</title>
 </head>
 <body>
-  <header id="header">
-    <div class="wrapper">
-      <!-- Logo and Navigation -->
-      <div class="nav">
-        <nav id="nav-bar">
-        <!-- Logo  -->
-        <a href="#header">
-          <img id="header-img" src="images/logo.svg" alt="sunnyside logo">
-        </a>
-          <!-- Nav Menu  -->
-          <ul class="nav-menu">
-            <li class="nav-link"><a href="#about">About</a></li>
-            <li class="nav-link"><a href="#testi">Tesimonials</a></li>
-            <li class="nav-link"><a href="#gallery">Gallery</a></li>
-          </ul>
-          <!-- Hamburger Menu  -->
-          <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-        </nav>
-      </div>
-      <!-- Header Banner -->
-      <div class="header-banner white">
-        <h1>we are creatives</h1>
-        <a href="#about"><img src="images/icon-arrow-down.svg" alt="down arrow"></a>
-      </div>
+  <!-- Header Navigation Video -->
+  <header id="header" class="header container">
+    <!-- Navigation -->
+    <nav id="nav-bar" class="nav-bar">
+      <!-- Company Logo  -->
+      <a href="#">
+        <!-- Image Company Logo -->
+        <!-- <img id="header-img" src="" alt="logo"> -->
+        <!-- Text Company Logo -->
+        <h1 id="header-img" class="logo">logo</h1>
+      </a>
+      <!-- Nav Menu  -->
+      <ul class="nav-menu">
+        <li class="nav-link"><a href="#about">About</a></li>
+        <li class="nav-link"><a href="#services">Services</a></li>
+        <li class="nav-link"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <!-- Video -->
+    <div id="video" class="video-wrap">
+      <video src="video/vid1.mp4" muted loop autoplay></video>
+    </div>
+    <!-- Header Content -->
+    <div class="header-content">
+      <h1>True Friend</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam fugit dignissimos sapiente quod. Iusto placeat at adipisci atque suscipit earum</p>
+      <!-- Button -->
+      <a href="#" class="btn">Learn More</a>
+      <!-- Socials -->
+      <ul class="social">
+        <li class="fb-icon"><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png" alt="facebook"></a></li>
+        <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" alt="twitter"></a></li>
+        <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png" alt="instagram"></a></li>
+      </ul>
     </div>
   </header>
-  <main id="main">
-    <!-- Upper Row  -->
-    <section>
-      <div id="about" class="upper-row box">
-        <img src="images/mobile/image-transform.jpg" alt="egg">
-        <div class="white-box">
-          <h2>Transform your brand</h2>
-          <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        </div>
-      </div>
-    </section>
-    <!-- Mid Row  -->
-    <section>
-      <div class="mid-row box">
-        <img src="images/mobile/image-stand-out.jpg" alt="egg">
-        <div class="white-box">
-          <h2>Stand out to the right audience</h2>
-          <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywrites, we'll build and extend your brand in digital places.</p>
-        </div>
-      </div>
-    </section>
-    <!-- Lower Row  -->
-    <section>
-      <div class="lower-row box">
-        <div class="upper-box">
-          <h2>Graphic Design</h2>
-          <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients' attention.</p>
-        </div>
-        <div class="lower-box">
-          <h2>Photography</h2>
-          <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
-        </div>
-      </div>
-    </section>
-    <!-- Testimonials -->
-    <section>
-      <div id="testi" class="testi">
-        <h5>client testimonials</h5>
-        <div class="testi-wrapper">
-          <div class="testi-box">
-            <img src="images/image-emily.jpg" alt="emily">
-            <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
-            <div class="testi-name">
-              Emily R.
-              <span class="position">Marketing Director</span>
-            </div>
-          </div>
-          <div class="testi-box">
-            <img src="images/image-thomas.jpg" alt="thomas">
-            <p>Sunnyside's enthusiasm coupled with their keen interest in our brand's success made it a satisfying and enjoyable experience.</p>
-            <div class="testi-name">
-              Thomas S.
-              <span class="position">Chief Operating Officer</span>
-            </div>
-          </div>
-          <div class="testi-box">
-            <img src="images/image-jennie.jpg" alt="jennie">
-            <p>Incredible end result! Our sales increased over  400% when we worked with Sunnyuside. Highly recommended</p>
-            <div class="testi-name">
-              Jennie F.
-              <span class="position">Business Owner</span>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- Gallery -->
-    <div id="gallery" class="gallery">
-      <div class="image-1 img"></div>
-      <div class="image-2 img"></div>
-      <div class="image-3 img"></div>
-      <div class="image-4 img"></div>
+  <!-- About Section -->
+  <section id="about" class="about">
+    <div class="about-content">
+      <h1>About Us</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab reprehenderit beatae, esse iusto tenetur assumenda? Ab possimus vitae veritatis, a officiis hic corporis accusantium excepturi! Optio sunt dolorum dicta eos!</p>
     </div>
-  </main>
-  <footer id="footer">
-    <a href="#header">
-      <img id="footer-img" src="images/logo.svg" alt="sunnyside logo">
-    </a>
-    <form action="">
-      <!-- Email -->
-      <label for="email" id="email-label">Contact Us</label><br>
-      <input type="email" id="email" placeholder="Email" name="email" required><br>
-      <!-- Submit Button  -->
-      <input id="submit" type="submit" value="Submit">
-    </form>
-    <div class="socials">
-      <a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a>
-      <a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a>
-      <a href="#"><img src="images/icon-twitter.svg" alt="twitter"></a>
-      <a href="#"><img src="images/icon-pinterest.svg" alt="pinterest"></a>
+    <div class="about-image">
+      <img src="images/cat-dog.jfif" alt="cat and dog">
     </div>
+  </section>
+  <!-- Services Section -->
+  <section id="services" class="services">
+    <div class="services-img">
+      <img src="images/service.jfif" alt="woman cat dog">
+    </div>
+    <div class="services-content">
+      <h2>Basic Pet</h2>
+      <h3>training</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus non placeat eos quo esse quasi debitis. Culpa enim nesciunt reiciendis labore. Possimus, molestias blanditiis dolorem quam debitis natus saepe repellendus?</p>
+      <a href="#" class="services-btn">all services</a>
+    </div>
+  </section>
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
+    <div class="contact-content">
+      <h2>Need a Sweet Heart?</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia rerum reiciendis aliquam recusandae culpa facilis dolor blanditiis, perferendis alias perspiciatis cum quasi quod odio nisi debitis excepturi ullam aperiam ipsam.</p>
+      <form id="form" action="">
+        <input id="email" type="email" name="email" placeholder="Enter your Email" required>
+        <input type="submit" value="Submit">
+      </form>
+      <!-- Socials -->
+      <ul class="social">
+        <li class="fb-icon"><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png" alt="facebook"></a></li>
+        <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" alt="twitter"></a></li>
+        <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png" alt="instagram"></a></li>
+      </ul>
+    </div>
+    <div class="contact-image">
+      <img src="images/cat-pc.jfif" alt="cat in a laptop">
+    </div>
+  </section>
+  <footer>
+    &copy Copyright 2021
   </footer>
-  <!-- Main JS -->
+  <!-- Navbar scroll -->
   <script src="main.js"></script>
 </body>
 </html>
