--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -22,7 +22,7 @@
         <!-- Image Company Logo -->
         <!-- <img id="header-img" src="" alt="logo"> -->
         <!-- Text Company Logo -->
-        <h1 id="header-img" class="logo">logo</h1>
+        <h1 id="header-img" class="logo">PAWS</h1>
       </a>
       <!-- Nav Menu  -->
       <ul class="nav-menu">
