--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
   <a href="./chess/index.html">Chessboard</a><br>
   <a href="./chess/grid.html">Chessboard Grid</a><br>
   <a href="./landing-page/index.html">Landing Page</a><br>
+  <a href="./calculator/index.html">Calculator</a><br>
 </body>
 </html>
