change the header from goal to focus

--- a/momentumApp/index.html
+++ b/momentumApp/index.html
@@ -52,7 +52,7 @@
     <div id="greeting"></div>
     <!-- Goal Form  -->
     <div id="goalForm">
-      <h1>What is your goal for today?</h1>
+      <h1>What is your main focus for today?</h1>
       <input id="goalInput" type="text">
     </div>
     <!-- Goal Text  -->
