--- a/momentumApp/index.html
+++ b/momentumApp/index.html
@@ -27,7 +27,7 @@
       <!-- Todo Btn  -->
       <button id="todo-btn" class="todo-btn"></button>
     </div>
-    <!-- Todo List  -->
+    <!-- Todo List Modal-->
     <div id="modal-container" class="modal-container">
       <div class="wrapper">
         <header><b>Todo List</b><span class="close"><i class="fas fa-times"></i></span></header> 
@@ -60,14 +60,24 @@
       <h3>Main Goal</h3><br>
     </div>
     <!-- Random Quote -->
-    <div id="quoteDisplay"></div>  
+    <div id="quoteDisplay"></div> 
+    <!-- New Quote Modal  -->
+    <div id="quote-modal-container" class="quote-modal-container">
+      <div class="wrapper">
+        <header><b>New Quote</b><span class="quote-close"><i class="fas fa-times"></i></span></header> 
+        <div class="quote-inputField">
+          <input type="text" placeholder="Add your new Quote">
+          <button><i class="fas fa-plus"></i></button>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- JAVASCRIPT -->
   <!-- Clock -->
   <script src="js/clock.js"></script>
-  <!-- Quotes  -->
-  <script src="js/quote.js"></script>
   <!-- Main JS -->
   <script src="js/main.js"></script>
+  <!-- Quotes  -->
+  <script src="js/quote.js"></script>
 </body>
 </html>
