--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -4,9 +4,34 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Main CSS -->
+  <link rel="stylesheet" href="main.css">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <title>TicTacToe</title>
 </head>
 <body>
-  
+  <!-- Select Box  -->
+  <div class="select-section">
+    <header class="game-title">Tic Tac Toe</header>
+  </div>
+  <!-- Main Container  -->
+  <section>
+    <div class="container">
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+      <div class="cell"></div>
+    </div> 
+  </section>
+  <!-- Main JS  -->
+  <script src="main.js"></script>
 </body>
 </html>
