--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -16,9 +16,16 @@
   <!-- Select Box  -->
   <div class="select-section">
     <header class="game-title">Tic Tac Toe</header>
+    <div class="content">
+      <div class="title">Choose your symbol</div>
+      <div class="options">
+        <button class="playerX">X</button>
+        <button class="playerO">O</button>
+      </div>
+    </div>
   </div>
   <!-- Main Container  -->
-  <section>
+  <!-- <section>
     <div class="container">
       <div class="cell"></div>
       <div class="cell"></div>
@@ -30,7 +37,7 @@
       <div class="cell"></div>
       <div class="cell"></div>
     </div> 
-  </section>
+  </section> -->
   <!-- Main JS  -->
   <script src="main.js"></script>
 </body>
