added click event on cells

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -25,19 +25,28 @@
     </div>
   </div>
   <!-- Main Container  -->
-  <!-- <section>
+  <section>
     <div class="container">
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
-      <div class="cell"></div>
+      <!-- Upper row -->
+      <section>
+        <span class="cell"></span>
+        <span class="cell"></span>
+        <span class="cell"></span>
+      </section>
+      <!-- Middle Row -->
+      <section>
+        <span class="cell"></span>
+        <span class="cell"></span>
+        <span class="cell"></span>
+      </section>
+      <!-- Bottom Row -->
+      <section>
+        <span class="cell"></span>
+        <span class="cell"></span>
+        <span class="cell"></span>
+      </section>
     </div> 
-  </section> -->
+  </section>
   <!-- Main JS  -->
   <script src="main.js"></script>
 </body>
