added background color on cell when clicked

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -4,50 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Main CSS -->
+  <!-- Main CSS  -->
   <link rel="stylesheet" href="main.css">
-  <!-- Google Fonts -->
+  <!-- Font Awesome  -->
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+  <!-- Google Fonts  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <title>TicTacToe</title>
+  <title>tictactow</title>
 </head>
 <body>
-  <!-- Select Box  -->
-  <div class="select-section">
-    <header class="game-title">Tic Tac Toe</header>
-    <div class="content">
-      <div class="title">Choose your symbol</div>
-      <div class="options">
-        <button class="playerX">X</button>
-        <button class="playerO">O</button>
-      </div>
-    </div>
+  <!-- Game Title  -->
+  <h1 class="game-title">TicTacToe</h1>
+  <!-- Game Container  -->
+  <div class="game-container">
+    <!-- Row 1  -->
+    <section>
+      <span class="cell"></span>
+      <span class="cell"></span>
+      <span class="cell"></span>
+    </section>
+    <!-- Row 2  -->
+    <section>
+      <span class="cell"></span>
+      <span class="cell"></span>
+      <span class="cell"></span>
+    </section>
+    <!-- Row 3  -->
+    <section>
+      <span class="cell"></span>
+      <span class="cell"></span>
+      <span class="cell"></span>
+    </section>
   </div>
-  <!-- Main Container  -->
-  <section>
-    <div class="container">
-      <!-- Upper row -->
-      <section>
-        <span class="cell"></span>
-        <span class="cell"></span>
-        <span class="cell"></span>
-      </section>
-      <!-- Middle Row -->
-      <section>
-        <span class="cell"></span>
-        <span class="cell"></span>
-        <span class="cell"></span>
-      </section>
-      <!-- Bottom Row -->
-      <section>
-        <span class="cell"></span>
-        <span class="cell"></span>
-        <span class="cell"></span>
-      </section>
-    </div> 
-  </section>
-  <!-- Main JS  -->
+  <!-- Javascript  -->
   <script src="main.js"></script>
 </body>
 </html>
