added background imageand saveMove function

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -11,31 +11,31 @@
   <!-- Google Fonts  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
   <title>tictactow</title>
 </head>
 <body>
   <!-- Game Title  -->
-  <h1 class="game-title">TicTacToe</h1>
+  <h1 class="game-title"><span style='color: #add8e6;'>T</span>ic<span style='color: #fe5c5c;'>T</span>ac<span style='color: #ffbf00;'>T</span>oe</h1>
   <!-- Game Container  -->
   <div class="game-container">
     <!-- Row 1  -->
     <section>
-      <span class="cell"></span>
-      <span class="cell"></span>
-      <span class="cell"></span>
+      <span data-cell-index="0" class="cell"></span>
+      <span data-cell-index="1" class="cell"></span>
+      <span data-cell-index="2" class="cell"></span>
     </section>
     <!-- Row 2  -->
     <section>
-      <span class="cell"></span>
-      <span class="cell"></span>
-      <span class="cell"></span>
+      <span data-cell-index="3" class="cell"></span>
+      <span data-cell-index="4" class="cell"></span>
+      <span data-cell-index="5" class="cell"></span>
     </section>
     <!-- Row 3  -->
     <section>
-      <span class="cell"></span>
-      <span class="cell"></span>
-      <span class="cell"></span>
+      <span data-cell-index="6" class="cell"></span>
+      <span data-cell-index="7" class="cell"></span>
+      <span data-cell-index="8" class="cell"></span>
     </section>
   </div>
   <!-- Javascript  -->
