added prev,reload, and next button

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -38,6 +38,11 @@
       <span data-cell-index="8" class="cell"></span>
     </section>
   </div>
+  <div class="buttons">
+    <span class="prev"><i class="fas fa-chevron-left"></i></span>
+    <span class="reload"><i class="fas fa-sync-alt"></i></span>
+    <span class="next"><i class="fas fa-chevron-right"></i></span>
+  </div>
   <!-- Javascript  -->
   <script src="main.js"></script>
 </body>
