added select box html and css

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -15,13 +15,24 @@
   <title>tictactow</title>
 </head>
 <body>
+  <!-- Select Box -->
+  <div class="select-box">
+    <header><span style='color: #add8e6;'>T</span>ic<span style='color: #fe5c5c;'>T</span>ac<span style='color: #ffbf00;'>T</span>oe</header>
+    <div class="content">
+      <div class="title">Select a symbol</div>
+      <div class="options">
+        <button class="playerX">X</button>
+        <button class="playerO">O</button>
+      </div>
+    </div>
+  </div>
   <!-- Game Title  -->
   <h1 class="game-title"><span style='color: #add8e6;'>T</span>ic<span style='color: #fe5c5c;'>T</span>ac<span style='color: #ffbf00;'>T</span>oe</h1>
   <!-- Game Container  -->
   <div class="game-container">
     <!-- Row 1  -->
     <section>
-      <span data-cell-index="0" class="cell"></span>
+      <span data-cell-index="0" class="cell cross"></span>
       <span data-cell-index="1" class="cell"></span>
       <span data-cell-index="2" class="cell"></span>
     </section>
