added slider on playboard details

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -53,8 +53,9 @@
   <div class="play-board">
     <div class="details">
       <div class="players">
-        <span class="Xturn active">X</span>
+        <span class="Xturn">X</span>
         <span class="Oturn">O</span>
+        <div class="slider"></div>
       </div>
     </div>
   </div>
