--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -64,6 +64,10 @@
     <span class="reload"><i class="fas fa-sync-alt"></i></span>
     <span class="next"><i class="fas fa-chevron-right"></i></span>
   </div>
+  <!-- result box  -->
+  <div class="result-box">
+    <div class="won-text">Player X won</div>
+  </div>
   <!-- Javascript  -->
   <script src="main.js"></script>
 </body>
