added close button on result box

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -67,6 +67,9 @@
   <!-- result box  -->
   <div class="result-box">
     <div class="won-text">Player X won</div>
+    <div class="btn-close">
+      <button>Close</button>
+    </div>
   </div>
   <!-- Javascript  -->
   <script src="main.js"></script>
