modify result box: added class show

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -66,7 +66,7 @@
   </div>
   <!-- result box  -->
   <div class="result-box">
-    <div class="won-text">Player X won</div>
+    <div class="won-text"></div>
     <div class="btn-close">
       <button>Close</button>
     </div>
