added close btn function on result box

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -59,6 +59,7 @@
       </div>
     </div>
   </div>
+  <!-- Prev, Next, Reload Buttons -->
   <div class="buttons">
     <span class="prev"><i class="fas fa-chevron-left"></i></span>
     <span class="reload"><i class="fas fa-sync-alt"></i></span>
