added prev and next btn

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -59,18 +59,18 @@
       </div>
     </div>
   </div>
-  <!-- Prev, Next, Reload Buttons -->
-  <div class="buttons">
-    <span class="prev"><i class="fas fa-chevron-left"></i></span>
-    <span class="reload"><i class="fas fa-sync-alt"></i></span>
-    <span class="next"><i class="fas fa-chevron-right"></i></span>
-  </div>
   <!-- result box  -->
   <div class="result-box">
     <div class="won-text"></div>
     <div class="btn-close">
       <button>Close</button>
     </div>
+  </div>
+  <!-- Prev, Next, Reload Buttons -->
+  <div class="buttons">
+    <span class="prev"><i class="fas fa-chevron-left"></i></span>
+    <span class="reload" onClick="window.location.reload();"><i class="fas fa-sync-alt"></i></span>
+    <span class="next"><i class="fas fa-chevron-right"></i></span>
   </div>
   <!-- Javascript  -->
   <script src="main.js"></script>
