added tictactoe on main index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <a href="./chess/grid.html">Chessboard Grid</a><br>
   <a href="./landing-page/index.html">Landing Page</a><br>
   <a href="./momentumApp/index.html">Momentum App</a><br>
-  <a href="./tic-tac-toe/index.html">TicTacToe</a><br>
+  <a href="./tictactoe/index.html">TicTacToe</a><br>
 </body>
 </html>
